--- a/config/promtail-values.yml
+++ b/config/promtail-values.yml
@@ -10,10 +10,8 @@ promtail:
             project_id: "psychic-sensor-230117"
             subscription: "psychic-sensor-230117-log-subscription"
             use_incoming_timestamp: false # default rewrite timestamps.
-            labels:
-              job: "gcplog"
+            # labels:
+              # job: "gcplog"
           relabel_configs:
-            - source_labels: ["__gcp_resource_type"]
-              target_label: "resource_type"
-            - source_labels: ["__gcp_resource_labels_project_id"]
-              target_label: "project"
+            - source_labels: ["__gcp_resource_labels_job_name"]
+              target_label: "job_name"
